--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/shahmadi/YelpCamp#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "ejs": "^2.5.9",
     "express": "^4.16.3"
   }
